[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/maintheme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menu/mainmenu.gd" type="Script" id=2]
[ext_resource path="res://ui/START_SCREEN.png" type="Texture" id=3]
[ext_resource path="res://ui/CaesarDressing-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/chars_flat.png" type="Texture" id=5]
[ext_resource path="res://ui/LOGO_AQUADEUS.png" type="Texture" id=6]
[ext_resource path="res://ui/controls.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 260
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 68
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = 353.0
margin_top = 43.0
margin_right = 1588.0
margin_bottom = 464.0
texture = ExtResource( 6 )
expand = true

[node name="Background2" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = 8.0
texture = ExtResource( 5 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 235.0
margin_top = 170.0
margin_right = 78.0
margin_bottom = -75.0
custom_constants/separation = 74
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 186.0
margin_right = 1763.0
margin_bottom = 649.0
custom_constants/separation = -11

[node name="Play" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 631.0
margin_right = 1131.0
margin_bottom = 317.0
focus_neighbour_bottom = NodePath("../Controls")
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "PLAY"

[node name="Button4" type="Button" parent="VBoxContainer/Buttons"]
visible = false
margin_left = 608.0
margin_top = 324.0
margin_right = 1053.0
margin_bottom = 482.0
size_flags_horizontal = 4
text = "CREDITS"

[node name="Controls" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 753.0
margin_top = 306.0
margin_right = 1010.0
margin_bottom = 390.0
focus_neighbour_top = NodePath("../Play")
focus_neighbour_bottom = NodePath("../Quit")
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Controls"

[node name="Quit" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 816.0
margin_top = 379.0
margin_right = 946.0
margin_bottom = 463.0
focus_neighbour_top = NodePath("../Controls")
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "QUIT"

[node name="Label" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 677.0
margin_right = 1661.0
margin_bottom = 796.0
text = "poseidon vs neptune "
align = 1

[node name="Controls" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="VBoxContainer/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Quit" to="." method="_on_Quit_pressed"]
